--- a/PhysPy-wk5_2015S.ipynb
+++ b/PhysPy-wk5_2015S.ipynb
@@ -12,27 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "temps_lst = [45., 50., 54., 60.]                   #  list\n",
-    "temps_dict = {0:45., 1:50., 2:54., 3:60.}          #  dictionary: key-value pairs; \n",
+    "temps_dict = {0:45., 1:50., 2:54., 3:60.}          #  dictionary: key-value pairs; one of the most important\n",
     "## Notice the usage of curly brackets:  {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'list'> <type 'dict'>\n",
+      "45.0 45.0\n",
+      "58\n"
+     ]
+    }
+   ],
    "source": [
     "print type(temps_lst), type(temps_dict)\n",
-    "print temps_lst[0], temps_dict[0]   # a key acts as an index"
+    "print temps_lst[0], temps_dict[0]   # a key acts as an index\n",
+    "\n",
+    "x = dict( one=58)\n",
+    "print x['one']"
    ]
   },
   {
@@ -48,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -59,22 +72,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.0\n"
+     ]
+    }
+   ],
    "source": [
     "print temps_dict['Portland']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary:\n",
+      "54.0\n",
+      "50.0\n",
+      "45.0\n",
+      "60.0\n",
+      "List:\n",
+      "45.0\n",
+      "50.0\n",
+      "54.0\n",
+      "60.0\n"
+     ]
+    }
+   ],
    "source": [
     "print 'Dictionary:'\n",
     "for city in temps_dict:      #note: my order may be different from yours\n",
@@ -88,11 +126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Los Angeles', 'Portland', 'San Francisco', 'Seattle']\n"
+     ]
+    }
+   ],
    "source": [
     "temps_sorted = sorted(temps_dict)   # the keys are sorted.\n",
     "print temps_sorted                  # no longer a dictionary!  A dictionary is inherently orderless."
@@ -100,11 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los Angeles 60.0\n",
+      "Portland 50.0\n",
+      "San Diego 63.0\n",
+      "San Francisco 54.0\n"
+     ]
+    }
+   ],
    "source": [
     "for city in sorted(temps_dict):\n",
     "    print city, temps_dict[city]  "
@@ -112,11 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'San Francisco': 54.0, 'Portland': 50.0, 'San Diego': 63.0, 'Los Angeles': 60.0}\n"
+     ]
+    }
+   ],
    "source": [
     "#Adding a key-value pair:\n",
     "temps_dict['San Diego'] = 63.0\n",
@@ -125,11 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Seattle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-7dbce9369bf2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Removing a key-value pair\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0mtemps_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Seattle'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtemps_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Seattle'"
+     ]
+    }
+   ],
    "source": [
     "#Removing a key-value pair\n",
     "del temps_dict['Seattle']\n",
@@ -153,11 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
    "source": [
     "# Copy vs. \"is\"\n",
     "temps_dict2 = temps_dict\n",
@@ -169,11 +254,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
    "source": [
     "import copy\n",
     "lst = [1,2]\n",
@@ -205,24 +298,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Francisco 54.0\n",
+      "Portland 50.0\n",
+      "San Diego 100.0\n",
+      "Los Angeles 60.0\n"
+     ]
+    }
+   ],
    "source": [
     "'''Approach 1'''\n",
-    "for key in temps_dict:\n",
-    "    print key, temps_dict[key]"
+    "for ian in temps_dict:\n",
+    "    print ian, temps_dict[ian]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Francisco 54.0\n",
+      "Portland 50.0\n",
+      "San Diego 100.0\n",
+      "Los Angeles 60.0\n"
+     ]
+    }
+   ],
    "source": [
     "'''Approach 2'''\n",
     "# Note the result of hitting tab after the dot -- all methods are shown!\n",
@@ -262,11 +377,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "115.003703704\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Example of Using Dictionaries: Computing the value of a polynomial\n",
@@ -277,18 +400,27 @@
     "    total = 0.\n",
     "    # pwr is the key, and coeff is the value\n",
     "    for pwr in coeffs:\n",
-    "        total += coeffs[pwr]*x**pwr\n",
+    "        tota l += coeffs[pwr]*x**pwr\n",
     "    return total\n",
-    "print polynom(coeffs, 2.0)"
+    "print polynom(coeffs, 3.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 1.000, 1.250, 1.500\n",
+      "a*x^-3 + b + c*x^2 + d*x^5: 15.100, 16.820, 21.423\n"
+     ]
+    }
+   ],
    "source": [
     "'''Combining Dictionary with Numpy Array'''\n",
     "coeffs = {-3:5.5, 0: 2.3, 2: 7.1, 5: 0.2}  ## key-value: power-coeff\n",
@@ -307,6 +439,29 @@
     "### y = 0.5 + 0.2cos(πx/2.) + 0.15cos(2πx/2.) + 0.1cos(4πx/2.) + 0.05cos(8πx/2.)\n",
     "\n",
     "### Plot y vs. x as an inline plot\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "x = linspace(0, 3.14, 100)\n",
+    "coeffs = {0: 0.5, 1: 0.2, 2: 0.15, 4: 0.1, 8: 0.05}  ## key:value -- power:coeff\n",
+    "\n",
+    "def cos_series(coeffs, x):\n",
+    "    total = 0.\n",
+    "    # pwr is the key, and coeff is the value\n",
+    "    for cos_int in coeffs:\n",
+    "        total += coeffs2w*math.cos((cos_int*math.pi*x)/2)\n",
+    "    return total\n",
+    "print polynom(coeffs, 3.0)"
    ]
   },
   {
@@ -349,14 +504,16 @@
    },
    "outputs": [],
    "source": [
-    "'''To make code more readable and therefore easier to modify and debug.\n",
+    "'''\n",
+    "\n",
+    "To make code more readable and therefore easier to modify and debug.\n",
     "Unlike functions, an instance of a class is \"introspective\".\n",
     "\n",
     "'''\n",
     "class Y:\n",
     "# The \"Constructor\"\n",
     "# It is a good habit always to have a constructor in a class and to initialize class attributes\n",
-    "    def __init__(self, v0):\n",
+    "    def __init__(self, v0): #attributes = self.(whatever constant/var we are defining)\n",
     "        self.v0 = v0     # a variable parameter: can be changed programmatically.\n",
     "        self.g = 9.81    # a constant parameter: cannot be changed programmatically, but only by hand.\n",
     "\n",
@@ -383,11 +540,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h(t = 2; v0 = 10) = 16.73\n",
+      "Formula: v0*t - 0.5*g*t**2; parameters: v0 = 10, g = 1.635 (constant).\n",
+      "Initial velocity 10\n",
+      "Gravity 1.635\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Keyword arguments for class.\n",
@@ -417,18 +585,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'v0': 10.0, 'g': 9.81}\n"
+     ]
+    }
+   ],
    "source": [
     "'''Can think of the definition of the attributes as the definition of a dictionary:\n",
     "{'v0':v0, 'g':9.81}\n",
     "in fact every class instance has a dictionary: __dict__\n",
     "'''\n",
     "y = Y()   ### here v0 has been assigned the value 2.0.\n",
-    "print y.__dict__"
+    "print y.__dict__ #yeilds all the classes attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1190.0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Y:\n",
+    "    def __init__(self, g = 9.81, v0 = 10.):\n",
+    "        self.g = g    \n",
+    "        self.v0 = v0\n",
+    "            \n",
+    "    def value(self, t):\n",
+    "        return self.v0*t - 0.5*self.g*t**2\n",
+    "    def formula(self):\n",
+    "        return 'v0*t - 0.5*g*t**2; parameters: v0 = {:g}, g = {:g} (constant).'.format(self.v0, self.g)\n",
+    "    def velocity(self, t):\n",
+    "        return self.v0 + -self.g*t\n",
+    "\n",
+    "y = Y(v0 = 11000)\n",
+    "y.velocity(1000)\n"
    ]
   },
   {
@@ -440,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -476,14 +687,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A bank account is created: Ian Cone\n",
+      "A bank account is created: Zowshung Hwong\n",
+      "1600\n",
+      "Ian Cone -11112222, balance: 1600\n"
+     ]
+    }
+   ],
    "source": [
-    "b1 = BankAccount('Fernando Perez', '11112222', 100000)\n",
-    "b2 = BankAccount('Guido van Rossum', '22223333', 200000)\n",
+    "b1 = BankAccount('Ian Cone', '-11112222', 100)\n",
+    "b2 = BankAccount('Zowshung Hwong', '22223333', 200000000)\n",
     "b1.deposit(1500)\n",
     "print b1.balance\n",
     "b1.dump()"
@@ -498,11 +720,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A bank account is created: Bugs Bunny\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Bugs Bunny'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "if you want to change the identity of a1, \n",
@@ -510,20 +750,32 @@
     "But you can also do this:\n",
     "'''\n",
     "\n",
-    "a1.__init__('Bugs Bunny', '123', 200)\n",
-    "a1.name"
+    "b1.__init__('Bugs Bunny', '123', 200)\n",
+    "b1.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AmazonAccount' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-60-8d8ded5a75c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# In other words, when you do\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mb1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAmazonAccount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Bugs Bunny'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'123'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# you are implicitly calling the method __init__.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'AmazonAccount' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# In other words, when you do \n",
-    "a1 = AmazonAccount('Bugs Bunny', '123', 200)\n",
+    "b1 = AmazonAccount('Bugs Bunny', '123', 200)\n",
     "# you are implicitly calling the method __init__."
    ]
   },
@@ -552,6 +804,8 @@
    },
    "outputs": [],
    "source": [
+    "class BankAccount:\n",
+    "    def __init__(self, name, account_number, initial_amount):\n",
     "# can delete an existing instance of a class:\n",
     "#if isinstance(t, Turtle):\n",
     "#    del t\n",
@@ -878,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
