--- a/comp-phys-wk5.ipynb
+++ b/comp-phys-wk5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -11,12 +11,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello work\n"
+      "A male whale named Splash is born!\n",
+      "Splash\n",
+      "male\n",
+      "A whale named Splash 0:00:00\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print 'hello work'"
+    "import datetime as dt\n",
+    "\n",
+    "class Whale:\n",
+    "    \n",
+    "    def __init__(self, name, sex):\n",
+    "        self.name = name\n",
+    "        if sex == 'M' or 'm':\n",
+    "            self.sex = 'male'\n",
+    "        else:\n",
+    "            self.sex = 'female'\n",
+    "        begin = dt.time\n",
+    "        print \"A\", self.sex, \"whale named\", self.name, \"is born!\"\n",
+    "\n",
+    "    def __call__(self):\n",
+    "        print 'A whale named', self.name, dt.timedelta()\n",
+    "        return '\\n'\n",
+    "    \n",
+    "W = Whale('Splash', 'f')\n",
+    "print W.name\n",
+    "print W.sex\n",
+    "print W()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00:00:00\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'now' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-43-d265ab787f52>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mnow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'now' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print W.time()\n",
+    "print now()"
    ]
   }
  ],
